# switchboard

./: Cargo.toml  LICENSE  README.md
resources/: 99-switchboard.rules  install-rules.sh
src/: cli.rs  config.rs  device.rs  gui.rs  keys.rs  main.rs
src/config/: config.rs  device.rs  profile.rs
src/gui/: application.rs  trayicon.rs  window.rs
