[package]
name = "switchboard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bitmask-enum = "2.2.5"
clap = { version = "4.6.0", features = ["derive"] }
ctrlc = "3.5.2"
dirs = "6.0.0"
dotenv = "0.15.0"
eframe = "0.33.3"
egui = "0.33.3"
egui-wgpu = { version = "0.33.3", features = ["winit"] }
egui-winit = "0.33.3"
gtk = "0.18.2"
image = {version = "0.25.10", features = ["png"] }
libc = "0.2.183"
pollster = "0.4.0"
regex = "1.12.3"
reqwest = "0.13.2"
rusb = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal"] }
toml = "1.0.7"
tray-icon = "0.21.3"
usb-ids = "1.2025.2"
wgpu = { version = "29.0.0", features = ["vulkan", "metal", "dx12"] }
winit = "0.30.13"
